# X-Finance

ai-core-backend/: .gitignore  pyproject.toml
ai-core-backend/src/: app.py  server.py
ai-core-backend/src/config/: ethereum_clients.py
ai-core-backend/src/controllers/: evm_query_controllers.py
ai-core-backend/src/graphs/: agent_engine.py  finance_L800_graph.py  graph_utilities.py
ai-core-backend/src/graphs/tools/: ethereum_toolkit.py  finance_toolkit.py
ai-core-backend/src/routes/: finance_chat_route.py
x-application/: package-lock.json  package.json
