[project]
name = "ai-core-backend"
version = "0.1.0"
description = "The Core AI logic for the X-Finance Platform."
authors = [
    {name = "Leroy Dickens",email = "85196627+Leroy3673@users.noreply.github.com"}
]
license = {text = "none"}
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
