[project]
name = "ai-core-backend"
version = "0.1.0"
description = "The Core AI logic for the X-Finance Platform."
authors = [
    {name = "Leroy Dickens",email = "85196627+Leroy3673@users.noreply.github.com"}
]
license = {text = "none"}
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.5,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-groq (>=0.3.7,<0.4.0)",
    "langchain-core (>=0.3.74,<0.4.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "langsmith (>=0.4.16,<0.5.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "langchain-chroma (>=0.1.2)",
    "chromadb (>=1.0.20,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "deepagents (>=0.0.4,<0.0.5)",
    "yfinance (>=0.2.65,<0.3.0)",
    "web3 (>=7.13.0,<8.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "ultralytics (>=8.3.184,<9.0.0)",
    "onnxruntime (>=1.22.1,<2.0.0)",
    "deepface (>=0.0.95,<0.0.96)",
    "clerk-backend-api (>=3.2.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
